<resources>
    <!--MainActivity-->
    <string name="app_name">EatLater</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Restaurant</string>
    <string name="no_data_hint">Add a restaurant you like now</string>

    <!--ShowingActivity-->
    <!--Button of ShowingActivity-->
    <string name="addTitle">Title</string>
    <string name="addNotes">Notes</string>
    <string name="addTel">TelNumber</string>
    <string name="addURL">Related site address</string>
    <string name="OK">COMMIT</string>
    <string name="back">BACK</string>
    <!--Button of ShowingActivity for ToEatFragment-->
    <string name="eaten_btn">CHECK!</string>

    <!--AlertDialog-->
    <string name="dialog_message">Are you sure to leave without saving?</string>
    <string name="dialog_title">The title is empty</string>
    <string name="confirm_btn">LEAVE</string>
    <string name="retype_btn">RETYPE</string>
    <string name="delete_dialog_message">Are you sure to delete it?</string>
    <string name="delete_dialog_title">It will permanently delete your restaurant note</string>
    <string name="delete_confirm_btn">DELETE</string>
    <string name="delete_cancel_btn">@android:string/cancel</string>

    <!--MapActivity-->
    <string name="title_activity_maps">Map</string>
    <string name="google_play_service_missing">There is no google play service in your device now</string>
    <!--Button of MapActivity-->
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <!--AlertDialog of MapActivity-->
    <string name="title_update_location">Restaurant location</string>
    <string name="message_update_location">Update the address with your current location OR Clear the older location?</string>
    <string name="clear">CLEAR</string>
    <string name="title_current_location">Current location</string>
    <string name="message_current_location">Want to save it now?</string>

</resources>
