<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="chrisit_chang.mycompany.eatlater.ShowingActivity">

    <EditText
        android:id="@+id/showingTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/addTitle"/>

    <EditText
        android:id="@+id/showingNotes"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/addNotes"
        android:layout_below="@id/showingTitle"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/showingTel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/showingNotes"
        android:hint="@string/addTel"/>

    <EditText
        android:id="@+id/showingAssociateDiary"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/showingTel"
        android:hint="@string/addURL"/>

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_below="@+id/showingAssociateDiary"
        android:layout_alignStart="@+id/picture" />

    <ImageButton
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        android:src="@android:drawable/ic_menu_send"
        android:layout_below="@+id/showingAssociateDiary"
        android:layout_toStartOf="@+id/update_back_button" />

    <ImageButton
        android:id="@+id/update_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_below="@id/showingAssociateDiary"
        android:layout_alignParentEnd="true" />

    <!-- 顯示圖片 -->
    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="6sp"
        android:visibility="invisible"
        android:layout_marginLeft="2sp"
        android:layout_marginRight="2sp"
        android:layout_below="@+id/camera_button"
        android:layout_alignParentStart="true" />
    <!--android:background="@drawable/retangle_drawable"-->


</RelativeLayout>
